--- a/02 - students/Александра Мясникова/HW/1/index.html
+++ b/02 - students/Александра Мясникова/HW/1/index.html
@@ -31,8 +31,8 @@
 2. Добавьте значения по умолчанию для аргументов функции. Как можно упростить или сократить запись функций? 
 
 - Добавила значения по умолчанию для первой функции. Для второй не знаю как и надо ли там. 
-Как сократить? возможно с помощь. деструктуризации массива объектов как-то можно, но у меня не получилось. 
-
+- В первой стрелочной функции убрать фигурные скобки и слово return, т.к. у функции всего 1 действие - можно писать без этого. 
+- Добавить деструктуризацию во вторую функцию. 
 3. *Сейчас после каждого товара на странице выводится запятая. Из-за чего это происходит? Как это исправить?  
 
 - запятые берутся из массива объектов с товарами. Как видно у последнего товара нет запятой и следовательно ее нет на сайте. 
