--- a/02 - students/Александр Омаров/Lesson1/index.html
+++ b/02 - students/Александр Омаров/Lesson1/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>eShop</title>
+    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/normalize.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <button class="cart-button" type="button">Корзина</button>
     </header>
-    <main>
+    <main class="main">
       <div class="goods-list"></div>
     </main>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
