--- a/02 - students/Леонид Кудряшов/Burger/index.html
+++ b/02 - students/Леонид Кудряшов/Burger/index.html
@@ -17,18 +17,18 @@
         <button class="btn_size_mini">Маленький</button>
         <button class="btn_size_max">Большой</button>
     </div>
-    <div class="block filling">
+    <div class="block filling screen_off">
         <span>Начинка гамбургера:</span>
         <button class="btn_filling_cheese">с сыром</button>
         <button class="btn_filling_salad">с салатом</button>
         <button class="btn_filling_potato">с картофелем</button>
     </div>
-    <div class="block additive">
+    <div class="block additive screen_off">
         <span>Дополнение к гамбургеру:</span>
         <button class="btn_additive_seasoning">с приправой</button>
         <button class="btn_additive_mayonnaise">с майонезом</button>
     </div>
-    <div class="block result">
+    <div class="block result screen_off">
         <button class="btn_result">расчитать</button>
         <span>ИТОГО:</span>
         <div class="screen_result"></div>
