--- a/02 - students/Леонид Кудряшов/Burger/index.html
+++ b/02 - students/Леонид Кудряшов/Burger/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="block burger_size">
         <span>Какой размер гамбургера хотите:</span>
-        <button class="btn_size_mini">Маленький</button>
+        <button class="btn_size_mini" value="small" data-price="30" data-calories="150">Маленький</button>
         <button class="btn_size_max">Большой</button>
     </div>
     <div class="block filling screen_off">
