--- a/02 - students/Aleksey Amosov/HW/4/index.html
+++ b/02 - students/Aleksey Amosov/HW/4/index.html
@@ -11,22 +11,22 @@
 <body>
   <div class="container">
       <div class="form-group has-success inputName">
-        <label class="col-form-label" for="inputSuccess1">Имя</label>
+        <label class="col-form-label">Имя</label>
         <input type="text" class="form-control form-control-success" id="inputName">
         <div class="form-control-feedback">Введите имя</div>
       </div>
       <div class="form-group has-success iTelefon">
-        <label class="col-form-label" for="inputSuccess1">Телефон [пример +7(000)000-0000]</label>
+        <label class="col-form-label">Телефон [пример +7(000)000-0000]</label>
         <input type="text" class="form-control form-control-success" id="iTelefon">
         <div class="form-control-feedback">Введите телефон</div>
       </div>
       <div class="form-group has-success iEmail">
-        <label class="col-form-label" for="inputSuccess1">Email</label>
+        <label class="col-form-label">Email</label>
         <input type="text" class="form-control form-control-success" id="iEmail">
         <div class="form-control-feedback">Введите почту вида mymail@mail.ru, или my.mail@mail.ru, или my-mail@mail.ru.</div>
       </div>
       <div class="form-group has-success iText">
-        <label class="col-form-label" for="inputSuccess1">Текст</label>
+        <label class="col-form-label">Текст</label>
         <input type="text" class="form-control form-control-success" id="iText">
         <div class="form-control-feedback">Произвольный текст</div>
       </div>
