--- a/02 - students/Лисихина Диана/HW2/index.html
+++ b/02 - students/Лисихина Диана/HW2/index.html
@@ -11,10 +11,19 @@
 
 <body>
     <header>
-        <button class="cart-button" type="button">Корзина</button>
+        <div class="cart">
+            <form action="#" class="search-form">
+                <input type="text" class="search-field">
+                <button class="btn-search" type="submit">
+                            <i class="fas fa-search"></i>
+                        </button>
+            </form>
+            <button class="cart-button" type="button">Корзина</button>
+            <div class="cart-block invisible"></div>
     </header>
     <main>
-        <div class="goods-list"></div>
+        <div class="products"></div>
+        <div class="productList"></div>
     </main>
     <script src="script.js"></script>
 
