--- a/02 - students/Aleksey Amosov/project/index.html
+++ b/02 - students/Aleksey Amosov/project/index.html
@@ -7,26 +7,54 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header>
-        <div class="logo">E-shop</div>
-        <div class="cart">
-            <form action="#" class="search-form">
-                <input type="text" class="search-field">
-                <button class="btn-search" type="submit">
-                    <i class="fas fa-search"></i>
-                </button>
-            </form>
-            <button class="btn-cart" type="button">Корзина</button>
-            <div class="cart-block invisible"></div>
-        </div>
-    </header>
-    <main>
-        <div class="products"></div>
-    </main>
-
-
-
+    <div id="app">
+        <header>
+            <div class="logo">E-shop</div>
+            <div class="cart">
+                <form action="#" class="search-form">
+                    <input type="text" class="search-field" v-model="searchLine">
+                    <button class="btn-search" type="submit" @click="filterGoods">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </form>
+                <button class="btn-cart" type="button" @click="changeVisibleCart">Корзина</button>
+                <div class="cart-block" v-show="isVisibleCart">
+                    <div class="cart-item" data-id="${this.product.id_product}" v-for="cart of carts" :key="cart.id_product">
+                        <div class="product-bio">
+                            <img :src="cartImage" alt="">
+                            <div class="product-desc">
+                                <p class="product-title">{{ cart.product_name }}</p>
+                                <p class="product-quantity">Кол-во:1</p>
+                                <p class="product-single-price">100 руб. за ед.</p>
+                            </div>
+                        </div>
+                        <div class="right-block">
+                            <p class="product-price">100</p>
+                            <button class="del-btn" data-id="${this.product.id_product}">&times;</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main>
+            <div class="products">
+                <div class="product-item" :data-id="product.id_product" v-for="product of filteredGoods" :key="product.id_product">
+                    <img :src="image" alt="Some img">
+                    <div class="desc">
+                        <h3>{{ product.product_name }}</h3>
+                        <p>{{ product.price }} руб.</p>
+                        <button class="buy-btn" 
+                        :data-id="product.id_product"
+                        :data-name="product.product_name"
+                        :data-image="image"
+                        :data-price="product.price">Купить</button>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
