--- a/02 - students/Aleksey Amosov/project/index.html
+++ b/02 - students/Aleksey Amosov/project/index.html
@@ -24,12 +24,12 @@
                             <img :src="cartImage" alt="">
                             <div class="product-desc">
                                 <p class="product-title">{{ cart.product_name }}</p>
-                                <p class="product-quantity">Кол-во:1</p>
-                                <p class="product-single-price">100 руб. за ед.</p>
+                                <p class="product-quantity">Кол-во:{{ cart.quantity }}</p>
+                                <p class="product-single-price">{{ cart.price }} руб. за ед.</p>
                             </div>
                         </div>
                         <div class="right-block">
-                            <p class="product-price">100</p>
+                            <p class="product-price">{{ cart.quantity * cart.price }}</p>
                             <button class="del-btn" data-id="${this.product.id_product}">&times;</button>
                         </div>
                     </div>
