--- a/02 - students/Виктория Горяйнова/HW/6/index.html
+++ b/02 - students/Виктория Горяйнова/HW/6/index.html
@@ -11,24 +11,22 @@
         <header>
             <div class="logo">E-shop</div>
             <div class="cart">
-                <form action="#" class="search-form" @submit.prevent="filterCatalog">
-                    <input type="text" class="search-field" v-model.lazy="filter">
-                    <button class="btn-search" type="submit">
-                        <i class="fas fa-search"></i>
-                    </button>
-                </form>
+                <search-block></search-block>
                 <button class="btn-cart" type="button" @Click="openCart = !openCart">Корзина</button>
-                    <cart-block ref="cabl" v-if="openCart" ></cart-block>
+                    <cart-block ref="cabl"></cart-block>
             </div>
         </header>
         <main>
-            <catalog ref="cata"></catalog>
+            <error-block v-if="err != ''" :err="err"></error-block>
+            <catalog v-else ref="cata"></catalog>
         </main>
         
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+    <script src="js/search.js"></script>
+    <script src="js/err.js"></script>
     <script src="js/catalog.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/main.js"></script>
