--- a/02 - students/Aleksey Amosov/project/index.html
+++ b/02 - students/Aleksey Amosov/project/index.html
@@ -10,56 +10,22 @@
     <div id="app">
         <header>
             <div class="logo">E-shop</div>
-                <form action="#" class="search-form">
-                    <input type="text" class="search-field" v-model="searchLine">
-                    <button class="btn-search" type="submit" @click="filterGoods">
+                <form action="#" class="search-form" @submit.prevent="inputsearchLine">
+                    <input type="text" class="search-field" v-model.lazy="searchLine">
+                    <button class="btn-search" type="submit">
                         <i class="fas fa-search"></i>
                     </button>
-                </form>			
-            <div class="cart">
-
-                <button class="btn-cart" type="button" @click="changeVisibleCart">Корзина</button>
-                <div class="cart-block" v-show="isVisibleCart">
-                    <div><p>Общая цена: {{ sumCarts }}</p><hr><div></div>
-                    <div class="cart-item" v-for="cart of carts" :key="cart.id_product">
-                        <div class="product-bio">
-                            <img :src="cartImage" alt="">
-                            <div class="product-desc">
-                                <p class="product-title">{{ cart.product_name }}</p>
-                                <p class="product-quantity">Кол-во:{{ cart.quantity }}</p>
-                                <p class="product-single-price">{{ cart.price }} руб. за ед.</p>
-                            </div>
-                        </div>
-                        <div class="right-block">
-                            <p class="product-price">{{ cart.quantity * cart.price }}</p>
-                            <button class="del-btn" :data-id="cart.id_product">&times;</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                </form>            
+            <carts></carts>
         </header>
         <main>
-            <div class="products" v-if="!isProductsEmpty">
-                <div class="product-item" :data-id="product.id_product" v-for="product of filteredProducts" :key="product.id_product">
-                    <img :src="imgCatalog" alt="Some img">
-                    <div class="desc">
-                        <h3>{{ product.product_name }}</h3>
-                        <p>{{ product.price }} руб.</p>
-                        <button class="buy-btn" 
-                        :data-id="product.id_product"
-                        :data-name="product.product_name"
-                        :data-image="imgCatalog"
-                        :data-price="product.price">Купить</button>
-                    </div>
-                </div>
-            </div>
-            <div v-else>
-                <h2>Нет данных</h2>
-            </div>
+            <catalog :search="searchLine" ref="cata">          
+            </catalog> 
         </main>
     </div>
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="js/catalog.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
