HW6: in progress

--- a/02 - students/Лиза Свитанько/project/index.html
+++ b/02 - students/Лиза Свитанько/project/index.html
@@ -8,24 +8,10 @@
 <body>
 <div id="app">
     <header>
-        <div id="search">
-            <input type="text" class="goods-search"/>
-            <button class="search-button" type="button" @click="searchClickHandler">Искать</button>
-        </div>
+        <goods-search></goods-search>
     </header>
     <main>
-        <template>
-            <div class="goods-list">
-                <p v-if="filteredGoods.length === 0">Нет данных</p>
-                <div class="goods-item" v-for="good in filteredGoods">
-                    <div class="goods-img"><img src=""></div>
-                    <h3>{{ good.product_name }}</h3>
-                    <p>{{ good.price }}</p>
-                    <button class="item-btn">Добавить</button>
-
-                </div>
-            </div>
-        </template>
+        <goods-list :goods="filteredGoods"></goods-list>
         <br>
 
         <!--Логичнее сделать значение равным true после одного нажатия, чтобы корзина показывалась и больше не убиралась-->
@@ -46,7 +32,7 @@
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
-<script src="js/script.js"></script>
-
+<script src="js/main.js"></script>
+<script src="js/catalog.js"></script>
 </body>
 </html>
