--- a/02 - students/Никита Мезенцев/Project/src/index.html
+++ b/02 - students/Никита Мезенцев/Project/src/index.html
@@ -7,19 +7,29 @@
     <title>eShop</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/gsap@2.1.3/umd/TweenMax.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="script.js" defer></script>
+    <script src="https://unpkg.com/vuex"></script>
+    <script src="db.js" defer></script>
+    <script src="store.js" defer></script>
+    <script src="component/notify.js" defer></script>
+    <script src="component/goods-item.js" defer></script>
+    <script src="component/goods-list.js" defer></script>
+    <script src="component/cart-item.js" defer></script>
+    <script src="component/cart.js" defer></script>
+    <script src="component/search-form.js" defer></script>
+    <script src="app.js" defer></script>
 </head>
 
 <body>
     <div id="app">
         <header>
             <a class="brand" href="#">eShop</a>
-            <search-form :value.sync="filter"></search-form>
-            <cart :items="cart"></cart>
+            <search-form></search-form>
+            <cart></cart>
         </header>
         <main>
-            <goods-list :items="filteredCatalog"></goods-list>
+            <goods-list></goods-list>
         </main>
     </div>
 </body>
