--- a/02 - students/Никита Мезенцев/Project/public/index.html
+++ b/02 - students/Никита Мезенцев/Project/public/index.html
@@ -10,15 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@2.1.3/umd/TweenMax.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vuex"></script>
-    <script src="db.js" defer></script>
-    <script src="store.js" defer></script>
-    <script src="component/notify.js" defer></script>
-    <script src="component/goods-item.js" defer></script>
-    <script src="component/goods-list.js" defer></script>
-    <script src="component/cart-item.js" defer></script>
-    <script src="component/cart.js" defer></script>
-    <script src="component/search-form.js" defer></script>
-    <script src="app.js" defer></script>
+    <script src="app.js" type="module"></script>
 </head>
 
 <body>
