--- a/02 - students/Евгений Павлов/project/public/index.html
+++ b/02 - students/Евгений Павлов/project/public/index.html
@@ -17,6 +17,7 @@
         </header>
         <main>
             <catalog ref="products"></catalog>
+            <error ref="error"></error>
         </main>
     </div>
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
@@ -24,6 +25,7 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="js/filter.js"></script>
+    <script src="js/error.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/catalog.js"></script>
     <script src="js/main.js"></script>
