--- a/01 - project/06-project/index.html
+++ b/01 - project/06-project/index.html
@@ -17,7 +17,7 @@
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
-                <button class="btn-cart" type="button">Корзина</button>
+                <button class="btn-cart" type="button" @click="$root.$refs.cata.helloFromBeyond()">Корзина</button>
                 <div class="cart-block invisible"></div>
             </div>
         </header>
