--- a/02 - students/Yuri Repishkov/project/index.html
+++ b/02 - students/Yuri Repishkov/project/index.html
@@ -13,34 +13,25 @@
 		<header>
 			<div class="logo">E-shop</div>
 			<div class="cart">
-				<form action="#" class="search-form" @submit.prevent="filterCatalog">
-					<input type="text" class="search-field" v-model.lazy="filter">
-					<button class="btn-search" type="submit">
-						<i class="fas fa-search"></i>
-					</button>
-				</form>
-				<button class="btn-cart" type="button">Корзина</button>
-				<div class="cart-block invisible"></div>
+				<filter-el></filter-el>
+				<cart ref="cart"></cart>
 			</div>
 		</header>
 		<main>
-			 <div class="products">
-                <div class="product-item" v-for="product of filtered" :key="product.id_product">
-                    <img :src="imgCatalog" alt="Some img">
-                    <div class="desc">
-                        <h3> {{ product.product_name }} </h3>
-                        <p>{{ product.price }} $</p>
-                        <button class="buy-btn" @click="addProduct (product)">Купить</button>
-                    </div>
-                </div>
-            </div>
+			<products ref="products"></products>
+			<error ref="error"></error>
 		</main>
+	
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
 		integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous">
 	</script>
+	<script src="js/FilterComp.js"></script>
+	<script src="js/ErrorComp.js"></script>
+	<script src="js/CartComp.js"></script>
+	<script src="js/ProductComp.js"></script>
 	<script src="js/main.js"></script>
 </body>
 
