--- a/02 - students/Александр Прокофьев/project/index.html
+++ b/02 - students/Александр Прокофьев/project/index.html
@@ -11,48 +11,23 @@
         <header>
             <div class="logo">E-shop</div>
             <div class="cart">
-                <form action="#" class="search-form" @submit.prevent="filterCatalog">
-                    <input type="text" class="search-field" v-model.lazy="filter">
-                    <button class="btn-search" type="submit">
-                        <i class="fas fa-search"></i>
-                    </button>
-                </form>
+                <search ref="search"></search>
                 <button class="btn-cart" type="button" @click="cart_toggle = !cart_toggle">Корзина</button>
-                <div class="cart-block" v-show="cart_toggle">
-                    <div class="cart-item" v-for="item in cart_items" :key="item.id_product">
-                        <div class="product-bio">
-                            <img :src="img_cart" alt="Some image">
-                            <div class="product-desc">
-                                <p class="product-title">{{item.product_name}}</p>
-                                <p class="product-quantity">Quantity: {{item.quantity}}</p>
-                                <p class="product-single-price">$ {{item.price}} each</p>
-                            </div>
-                        </div>
-                        <div class="right-block">
-                            <p class="product-price">{{item.quantity * item.price}}</p>
-                            <button class="del-btn">&times;</button>
-                        </div>
-                    </div>
-                    <div class="cart-item" v-if="cart_items.length == 0">{{cart_empty_msg}}</div>
-                </div>
+                <cart ref="cart" :toggle="cart_toggle"></cart>
             </div>
         </header>
         <main>
-            <div class="products">
-                <div class="product-item" v-for="product of filtered" :key="product.product_id">
-                    <img :src="img_catalog" alt="Some img">
-                    <div class="desc">
-                        <h3>{{product.product_name}}</h3>
-                        <p>{{product.price}} $</p>
-                        <button class="buy-btn" @click="addProduct(product)">Купить</button>
-                    </div>
-                </div>
-            </div>
+            <catalog ref="cata"></catalog>            
         </main>
+        <err-notifier ref="err_notifier"></err-notifier>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>    
+    <script src="js/catalog.js"></script>
+    <script src="js/cart.js"></script>
+    <script src="js/filter.js"></script>
+    <script src="js/error-notifier.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
