--- a/02 - students/Евгений Павлов/project/src/public/index.html
+++ b/02 - students/Евгений Павлов/project/src/public/index.html
@@ -4,15 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Интернет-магазин</title>
-    <link rel="stylesheet" href="style/normalize.css">
-    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
     <div id="app">
         <header>
             <div class="logo">E-shop</div>
-            <filter-block></filter-block>
+            <filterblock></filterblock>
             <cart class="cart" ref="cart"></cart>
         </header>
         <main>
@@ -24,11 +22,6 @@
         integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="js/filter.js"></script>
-    <script src="js/error.js"></script>
-    <script src="js/cart.js"></script>
-    <script src="js/catalog.js"></script>
-    <script src="js/main.js"></script>
 </body>
 
 </html>
