--- a/02 - students/Лиза Свитанько/project/index.html
+++ b/02 - students/Лиза Свитанько/project/index.html
@@ -11,28 +11,15 @@
         <goods-search></goods-search>
     </header>
     <main>
-        <goods-list :goods="filteredGoods"></goods-list>
+        <catalog ref="cata" :goods="filteredGoods"></catalog>
         <br>
-
-        <!--Логичнее сделать значение равным true после одного нажатия, чтобы корзина показывалась и больше не убиралась-->
-        <button class="cart-button" type="button" @click="isVisibleCart = true">Корзина</button>
-        <div v-show="isVisibleCart">
-            <div class="goods-list">
-                <p v-if="cartGoods.length === 0">В корзине ничего нет</p>
-                <div class="goods-item" v-for="good in cartGoods">
-                    <div class="goods-img"><img src=""></div>
-                    <h3>{{ good.product_name }}</h3>
-                    <p>{{ good.price }}</p>
-                    <button class="item-btn">Удалить</button>
-                </div>
-            </div>
-        </div>
-
+        <cart ref="cart"></cart>
     </main>
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
-<script src="js/main.js"></script>
 <script src="js/catalog.js"></script>
+<script src="js/main.js"></script>
+
 </body>
 </html>
