--- a/02 - students/Александр Прокофьев/project/src/public/index.html
+++ b/02 - students/Александр Прокофьев/project/src/public/index.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Интернет-магазин</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="app">
@@ -19,15 +17,10 @@
         <main>
             <catalog ref="cata"></catalog>            
         </main>
-        <err-notifier ref="err_notifier"></err-notifier>
+        <error ref="err_notifier"></error>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>    
-    <script src="js/catalog.js"></script>
-    <script src="js/cart.js"></script>
-    <script src="js/filter.js"></script>
-    <script src="js/error-notifier.js"></script>
-    <script src="js/main.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
 </body>
 </html>
